# Kaldi-Asr

./: README.md
code_copy/: decode_fmllr.sh  gmm_test.sh  zhang_decode.sh
kaldi/Speech-Fluency/ComputeScore/: readme.txt
kaldi/Speech-Fluency/ComputeScore/src/: compute-center.cpp  compute-center.h  python-call.cpp
kaldi/Speech-Fluency/ComputeScore/src/PhonesGop/: compute-gop.cpp  compute-gop.h  decode.cpp  decode.h  decoder-wrappers.cpp  decoder-wrappers.h  extract-feature.cpp  extract-feature.h  lattice-faster-decoder.cpp  prepare-data.cpp  prepare-data.h  python-call.txt
kaldi/Speech-Fluency/ComputeScore/src/common/config/: config-parser.cpp  config-parser.hpp
kaldi/Speech-Fluency/ComputeScore/src/fluency/: chainDecode.cc  chainDecode.h  dataExtract.cc  dataExtract.h  mfcc.cc  mfcc.h  pymodule.txt  score.cc  score.h  sentenceParse.cc  sentenceParse.h  speechPause.cc  speechPause.h  speechPublic.cc  speechPublic.h  speechStress.cc  speechStress.h  trainParameters.cc  trainParameters.h  wordScore.cc  wordScore.h
kaldi/Speech-Fluency/ComputeScore/src/testbin/: compute-test.cpp
kaldi/egs/aishell/s5/: ReadMe.txt
kaldi/egs/tedlium/s5/: ReadMe.txt
kaldi/egs/timit/: Script running instructions.txt
kaldi/egs/voxforge/s5/: ReadMe.txt
kaldi/egs/yesno/: Script running instructions.txt
kaldi/fluency/: app.py  swagger.yaml  test_interface.py
kaldi/fluency/fluency/: CMakeLists.txt
kaldi/tools/kaldi_lm/: compute_perplexity  discount_ngrams  get_raw_ngrams  interpolate_ngrams  merge_ngrams  prune_ngrams  uniq_to_ngrams
